--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Example</title>
     </head>
     <body>
-        <p>Zitronenbonbons?</p>
+        <h1>Zitronenbonbons?</h1>
     </body>
 </html>
